configured swagger better
